--- a/custom-web-app.html
+++ b/custom-web-app.html
@@ -81,10 +81,10 @@
         <div class="background-dark-thin">
             <div class="container">
                 <div class="section-first-body d-flex flex-column justify-content-center text-center align-items-center text-white">
-                    <h1 class="text-capitalize mb-3 fw-light" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
+                    <h1 class="text-capitalize mb-3 fw-light w-55" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
                         Custom Web Application Development
                     </h1>
-                    <p class="mb-4 fs-5 fw-light" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
+                    <p class="mb-4 fs-5 fw-light w-55" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
                         Wujudkan pencapaian tujuan bisnis Anda menggunakan aplikasi web yang dibuat khusus, dapat diskalakan, dan aman yang dikembangkan oleh Tim terbaik kami.
                     </p>
 
@@ -205,13 +205,14 @@
     </section>
     <section class="ask-questions py-5">
         <div class="container">
-            <div class="ask-questions-title d-flex justify-content-between align-items-center">
-                <div></div>
-                <h3 class="text-uppercase">faq</h3>
-                <i class="fas fa-search"></i>
-            </div>
+            <h3 class="text-uppercase text-center">faq</h3>
+            <form class="search-area position-relative">
+                <input type="text" class="input-search float-end form-control" placeholder="Looking for something?">
+                <i class="fas fa-search search-icon position-absolute"></i>
+                <button class="position-absolute btn-close" type="reset"></button>
+              </form>
             <div class="accordion accordion-flush faq-dropdown" id="accordionFlushExample">
-                <div class="accordion-item">
+                <div class="accordion-item" id="accordion-item-0">
                     <h2 class="fw-bold" id="flush-headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                             PEMESANAN
@@ -283,7 +284,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item" id="accordion-item-1">
                     <h2 class="accordion-header" id="flush-headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                             TECHNICAL FLOW
@@ -384,7 +385,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item" id="accordion-item-2">
                     <h2 class="accordion-header" id="flush-headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
                             GENERAL INFORMATION
@@ -449,33 +450,39 @@
                     </div>
                 </div>
             </div>
+            <div class="message-empty">
+                <p class="mb-0">Maaf, tidak ada hasil yang cocok dengan kriteria pencarian Anda.</p>
+                <p class="mb-0">Silakan coba lagi dengan kata kunci lain.</p>
+              </div>
         </div>
     </section>
     <footer>
         <div class="container">
-            <div class="footer-body d-flex justify-content-between">
-                <p class="fw-light footer-title m-0">
-                    Nineod &copy; 2021 All Rights Reserved
-                </p>
-                <p class="fw-light text-center m-0">
-                    <a href="#" class="text-decoration-none">Proudly created</a>
-                    with <img src="./assets/img/love.svg" alt="love" class="img-footer" /> by
-                    <a href="https://www.nineod.com/" class="text-decoration-none">nineod</a>
-                </p>
-                <div class="media-social-icon d-flex justify-content-end">
-                    <a href="" class="text-secondary"><i class="fab fa-facebook-f fs-5"></i></a>
-                    <a href="" class="text-secondary"><i class="fab fa-twitter fs-5"></i></a>
-                    <a href="" class="text-secondary"><i class="fab fa-instagram fs-5"></i></a>
-                    <a href="" class="text-secondary"><i class="fab fa-linkedin-in fs-5"></i></a>
-                </div>
+          <div class="footer-body d-flex justify-content-between">
+            <p class="fw-light footer-title m-0">
+              Nineod &copy; 2021 All Rights Reserved
+            </p>
+            <p class="fw-light text-center m-0">
+              <a href="#" class="text-decoration-none">Proudly created</a>
+              with
+              <img src="./assets/img/love.svg" alt="love" class="img-footer" /> by
+              <a href="https://www.nineod.com/" class="text-decoration-none">nineod</a>
+            </p>
+            <div class="media-social-icon d-flex justify-content-end">
+              <a href="https://www.facebook.com/nineod/" target="_blank" class="text-secondary"><i class="fab fa-facebook-f fs-6"></i></a>
+              <a href="https://twitter.com/nineodofficial" target="_blank" class="text-secondary"><i class="fab fa-twitter fs-6"></i></a>
+              <a href="https://www.youtube.com/channel/UC5i3z--8T9DPZR7JcGye94w" target="_blank" class="text-secondary"><i class="fab fa-youtube fs-6"></i></a>
+              <a href="https://www.instagram.com/nineodofficial/" target="_blank" class="text-secondary"><i class="fab fa-instagram fs-6"></i></a>
             </div>
+          </div>
         </div>
-    </footer>
+      </footer>
     <script src="./assets/js/jquery/jquery.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
   <script src="./assets/js/aos/customAos.js"></script>
   <script src="./assets/js/navToggle.js"></script>
+  <script src="./assets/js/servicePage.js"></script>
 </body>
 
 </html>
