--- a/services.html
+++ b/services.html
@@ -225,14 +225,15 @@
                 </p>
                 <p class="fw-light text-center m-0">
                     <a href="#" class="text-decoration-none">Proudly created</a>
-                    with <img src="./assets/img/love.svg" alt="love" class="img-footer" /> by
+                    with
+                    <img src="./assets/img/love.svg" alt="love" class="img-footer" /> by
                     <a href="https://www.nineod.com/" class="text-decoration-none">nineod</a>
                 </p>
                 <div class="media-social-icon d-flex justify-content-end">
-                    <a href="" class="text-secondary"><i class="fab fa-facebook-f fs-5"></i></a>
-                    <a href="" class="text-secondary"><i class="fab fa-twitter fs-5"></i></a>
-                    <a href="" class="text-secondary"><i class="fab fa-instagram fs-5"></i></a>
-                    <a href="" class="text-secondary"><i class="fab fa-linkedin-in fs-5"></i></a>
+                    <a href="https://www.facebook.com/nineod/" target="_blank" class="text-secondary"><i class="fab fa-facebook-f fs-6"></i></a>
+                    <a href="https://twitter.com/nineodofficial" target="_blank" class="text-secondary"><i class="fab fa-twitter fs-6"></i></a>
+                    <a href="https://www.youtube.com/channel/UC5i3z--8T9DPZR7JcGye94w" target="_blank" class="text-secondary"><i class="fab fa-youtube fs-6"></i></a>
+                    <a href="https://www.instagram.com/nineodofficial/" target="_blank" class="text-secondary"><i class="fab fa-instagram fs-6"></i></a>
                 </div>
             </div>
         </div>
