update feature search accordion

--- a/website-builder.html
+++ b/website-builder.html
@@ -178,14 +178,18 @@
         <i class="fas fa-search search-icon position-absolute"></i>
         <button class="position-absolute btn-close" type="reset"></button>
       </div>
+      <div class="message-empty">
+        <p class="mb-0">Maaf, tidak ada hasil yang cocok dengan kriteria pencarian Anda.</p>
+        <p class="mb-0">Silakan coba lagi dengan kata kunci lain.</p>
+      </div>
       <div class="accordion accordion-flush faq-dropdown" id="accordionFlushExample">
         <div class="accordion-item" id="accordion-item-0">
           <h2 class="fw-bold" id="flush-headingOne">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse-0" aria-expanded="false" aria-controls="flush-collapse-0">
               PEMESANAN
             </button>
           </h2>
-          <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+          <div id="flush-collapse-0" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
               <span class="fw-semibold">BAGAIMANA CARA LENGKAP UNTUK MELAKUKAN PEMESANAN?</span>
               <ul>
@@ -253,11 +257,11 @@
         </div>
         <div class="accordion-item" id="accordion-item-1">
           <h2 class="accordion-header" id="flush-headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse-1" aria-expanded="false" aria-controls="flush-collapse-1">
               TECHNICAL FLOW
             </button>
           </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+          <div id="flush-collapse-1" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
               <span class="fw-semibold">BERAPA LAMA PENGERJAAN UNTUK WEBSITE E-COMMERCE
                 TERSEBUT?</span>
@@ -354,11 +358,11 @@
         </div>
         <div class="accordion-item" id="accordion-item-2">
           <h2 class="accordion-header" id="flush-headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse-2" aria-expanded="false" aria-controls="flush-collapse-2">
               GENERAL INFORMATION
             </button>
           </h2>
-          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+          <div id="flush-collapse-2" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
               <span class="fw-semibold">BERAPA HARGA UNTUK SETIAP PAKET?</span>
               <ul>
@@ -416,10 +420,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="message-empty">
-        <p class="mb-0">Maaf, tidak ada hasil yang cocok dengan kriteria pencarian Anda.</p>
-        <p class="mb-0">Silakan coba lagi dengan kata kunci lain.</p>
       </div>
     </div>
   </section>
